Messing with links to see if it fixes the alignment issue

--- a/public/styles/landing_style.css
+++ b/public/styles/landing_style.css
@@ -1,7 +1,6 @@
 /* Basic things for the body- bg image with a white gradient of 0.7 transparency over it to make it lighter. */
 body {
-    background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)),
-                    url(".../bgs/bg-water-tile-big.png");
+    background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(".../bgs/bg-water-tile-big.png");
   }
   
   h1 {
@@ -36,10 +35,12 @@ body {
   }
   
   /* Link formatting for landing page */
-  a {
+  #subtitle {
     text-decoration: none;
-    color:#704D41
+    color:#704D41;
+    font-family: "chams";
   }
+
   
   
   
